--- a/dj_basic1/boardproject/templates/base.html
+++ b/dj_basic1/boardproject/templates/base.html
@@ -8,6 +8,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
+    {% block customcss %}
+    {% endblock customcss %}
+    
     <title>Hello, world!</title>
   </head>
 
@@ -17,4 +20,5 @@
     {% block content %}
     {% endblock content %}
 
+  </body>
 </html>
